refacto: move a bunch of things in different folders
